tests/NormalTests/paczka2/big_fuzzy/63428428.err
Error in line 2: OBSrGaA2yP S872 98,1
Error in line 5: OBSrGaA2yP A283 38,7
Error in line 13: S872 A431 24,2
Error in line 15: S872 A17 51,8
Error in line 16: S872 A431 56,9
Error in line 18: aUkwO2 A431 -2,0
Error in line 1: qFv2w4GsBer A283 16,8
Error in line 12: aUkwO2 A431 34,0
Error in line 25: 872 A17 2,9
Error in line 24: aUkwO2 A283 90,2
Error in line 26: gtck A17 17,1
Error in line 20: S872 A17 55,8
Error in line 30: gtck S872 92,5
Error in line 42: bwmAh A283 29,9
Error in line 57: qFv2w4GsBer S872 86,8
Error in line 52: aUkwO2 A431 63,4
Error in line 58: bwmAh S872 90,1
Error in line 60: gtck S872 73,6
Error in line 75: OBSrGaA2yP A283 212,4
Error in line 87: ´872 A431 79,8
Error in line 95: OBSrGaA2yP A17 60,2
Error in line 86: qFv2w4GsBer A283 63,7
Error in line 103: bwmAh A283 49,2
Error in line 114: bwmAh A431 35,1
Error in line 121: OBSrGaA2yP A17 17,1
Error in line 136: aUkwO2 A283 12,5
Error in line 130: gtck S872 142,1
Error in line 134: OBSrGaA2yP S872 73,1
Error in line 142: OBSrGaA2yP A431 12,3
Error in line 112: qFv2w4GsBer S872 171,6
Error in line 147: qFv2w4GsBer A283 39,6
Error in line 152: gtck S872 82,3
Error in line 157: gtck A17 96,9
Error in line 153: rlGvTKsnZ A17 7,4
Error in line 168: aUkwO2 A431 84,4
Error in line 174: bwmAh A17 76,9
Error in line 178: bwmAh S872 85,0
Error in line 188: bwmAh A431 120,6
Error in line 171: rlGvTKsnZ A17 62,4
Error in line 197: bwmAh S872 31,8
Error in line 208: S872 A283 85,3
Error in line 212: rlGvTKsnZ S872 9,4
Error in line 227: gtck A431 69,63
Error in line 219: rlGvTKsnZ A17 6,9
Error in line 230: gtck A283 21,2
Error in line 236: OBSrGaA2yP A283 11,3
Error in line 242: qFv2w4GsBer S872 74,2
